Intermittent Assertion failure: IsSupported(webgl), at /builds/worker/checkouts/gecko/dom/canvas/WebGLExtensions.cpp:105
Categories
(Core :: Graphics: CanvasWebGL, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jgilbert)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
Filed by: rmaries [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=314661833&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XPTmtbAwTAWuhM16K2ioBA/runs/0/artifacts/public/logs/live_backing.log
[task 2020-09-02T07:16:47.826Z] 07:16:47 INFO - TEST-START | dom/canvas/test/webgl-conf/generated/test_2_conformance__extensions__get-extension.html
[task 2020-09-02T07:16:47.968Z] 07:16:47 INFO - GECKO(1683) | [Child 1686, Main Thread] WARNING: Attempt to delete missing or closed actor: file /builds/worker/workspace/obj-build/ipc/ipdl/PWebGLChild.cpp, line 111
[task 2020-09-02T07:16:47.968Z] 07:16:47 INFO - GECKO(1683) | [Child 1686, Main Thread] WARNING: Attempt to delete missing or closed actor: file /builds/worker/workspace/obj-build/ipc/ipdl/PWebGLChild.cpp, line 111
[task 2020-09-02T07:16:48.637Z] 07:16:48 INFO - GECKO(1683) | MEMORY STAT | vsize 7541MB | residentFast 215MB | heapAllocated 23MB
[task 2020-09-02T07:16:48.643Z] 07:16:48 INFO - GECKO(1683) | [WebGLChild] Flushed 141 bytes. (141 over 1 flushes)
[task 2020-09-02T07:16:48.643Z] 07:16:48 INFO - GECKO(1683) | Assertion failure: IsSupported(webgl), at /builds/worker/checkouts/gecko/dom/canvas/WebGLExtensions.cpp:105
[task 2020-09-02T07:16:48.650Z] 07:16:48 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2020-09-02T07:16:57.538Z] 07:16:57 INFO - GECKO(1683) | #01: mozilla::WebGLContext::RequestExtension(mozilla::WebGLExtensionID, bool) [dom/canvas/WebGLContextExtensions.cpp:414]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #02: bool mozilla::MethodDispatcher<mozilla::WebGLMethodDispatcher, (unsigned long)25, void (mozilla::HostWebGLContext::)(mozilla::avec2<unsigned int> const&), &mozilla::HostWebGLContext(mozilla::avec2<unsigned int> const&)::Resize, (mozilla::CommandSyncType)0>::DispatchCommand<mozilla::HostWebGLContext>(mozilla::HostWebGLContext&, unsigned long, mozilla::webgl::RangeConsumerView&) [dom/canvas/WebGLCommandQueue.h:695]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #03: mozilla::dom::WebGLParent::RecvDispatchCommands(mozilla::ipc::Shmem&&, unsigned long long) [dom/canvas/WebGLParent.cpp:64]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #04: mozilla::dom::PWebGLParent::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:58edd9a1f63d94ea0ffa143cd87e6a669d451f53fd231f39b3fb9c980769a7764e9867e81c57f257bbabd19206231a95435d9fc1029e7d3132992a0e3a04bbf6/ipc/ipdl/PWebGLParent.cpp::195]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #05: mozilla::layers::PCompositorManagerParent::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:3552e9c7dfc59993bbb860f386b4e7562f0796bd14c67ddcf3c276ab38bf55987f51528d999c5ce707778c2a53e0fe4026194fd83427b026d7d39b040393ef66/ipc/ipdl/PCompositorManagerParent.cpp::197]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #06: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy, IPC::Message const&) [ipc/glue/MessageChannel.cpp:2151]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #07: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [ipc/glue/MessageChannel.cpp:2074]
[task 2020-09-02T07:16:57.539Z] 07:16:57 INFO - GECKO(1683) | #08: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:1922]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #09: mozilla::ipc::MessageChannel::MessageTask::Run() [ipc/glue/MessageChannel.cpp:1955]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #10: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1236]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #11: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:513]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #12: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:303]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #13: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:310]
[task 2020-09-02T07:16:57.540Z] 07:16:57 INFO - GECKO(1683) | #14: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:444]
[task 2020-09-02T07:16:57.754Z] 07:16:57 INFO - GECKO(1683) | #15: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:204]c
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Description
•