Bug 1662649 - Don't hard-assert IsSupported for pref-gated WebGL exts. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D89176